--- a/niktravel/static/scss/_ed-grid.scss
+++ b/niktravel/static/scss/_ed-grid.scss
@@ -49,3 +49,18 @@
 @import "components/buttons";         // mixin button()
 @import "components/css-core";        // componentes que se compilaran por default a css
 @import "components/css-helpers";     // ayudas en css (por medio de clases)
+
+// my components
+@import "components/typography";       // estilos par los titulos
+
+// molecules
+@import "molecules/iconbar.scss";      // icomo para mostar el menu
+@import "molecules/logo.scss";         // logo
+
+// collections
+@import "collections/nav.scss";
+
+// layuaut 
+@import "layaut/app.scss";
+@import "layaut/header.scss";
+
