--- a/niktravel/static/scss/components/_base.scss
+++ b/niktravel/static/scss/components/_base.scss
@@ -7,7 +7,8 @@
 
 body {
   margin      : 0;
-  font-family : sans-serif;
+  font-family : $family;
+  font-size: 16px;
 }
 
 // Imágenes responsive
