creacion de banner sections

--- a/niktravel/static/scss/_ed-grid.scss
+++ b/niktravel/static/scss/_ed-grid.scss
@@ -62,5 +62,7 @@
 
 // layuaut 
 @import "layaut/app.scss";
+@import "layaut/section.scss";
 @import "layaut/header.scss";
+@import "layaut/banner.scss";
 
