--- a/niktravel/static/css/styles.css
+++ b/niktravel/static/css/styles.css
@@ -34,7 +34,7 @@ a:hover {
   text-decoration: underline;
 }
 
-.ed-container, .header {
+.ed-container, .section, .header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -46,7 +46,7 @@ a:hover {
   width: 100%;
 }
 
-.ed-item, .toggle-menu, .logo-header, .main-nav {
+.ed-item, .toggle-menu, .logo-header, .main-nav, .section__title, .section__subtitle {
   margin: 0;
   padding-left: 0.9375em;
   padding-right: 0.9375em;
@@ -879,38 +879,38 @@ body.sticky-footer > footer {
           transform: scale(0.97);
 }
 
-.title1 {
+.banner__title {
   font-size: 1.999em;
   line-height: 30px;
 }
 
 @media screen and (min-width: 640px) {
-  .title1 {
+  .banner__title {
     font-size: 2.827em;
     line-height: 37.5px;
   }
 }
 
-.title2 {
-  font-size: 1.414em;
-  line-height: 22.5px;
-}
-
-@media screen and (min-width: 640px) {
-  .title2 {
-    font-size: 1.999em;
-    line-height: 30px;
-  }
-}
-
-.title3 {
+.section__subtitle {
   font-size: 1em;
   line-height: 15px;
 }
 
 @media screen and (min-width: 640px) {
-  .title3 {
+  .section__subtitle {
     font-size: 1.414em;
+    line-height: 15px;
+  }
+}
+
+.banner__description {
+  font-size: 0.707em;
+  line-height: 15px;
+}
+
+@media screen and (min-width: 640px) {
+  .banner__description {
+    font-size: 1em;
     line-height: 15px;
   }
 }
@@ -1060,15 +1060,72 @@ h1, h2, h3, h4 {
 }
 
 .app {
+  position: relative;
   display: grid;
   min-height: 100vh;
   grid-template-rows: auto 1fr auto;
 }
 
+.section {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 22.5px;
+}
+
+.section__title {
+  width: 100%;
+  text-align: center;
+  padding-bottom: 7.5px;
+}
+
+.section__subtitle {
+  width: 100%;
+  text-align: center;
+  color: #b63327;
+  padding-bottom: 15px;
+}
+
 .header {
+  position: absolute;
+  left: 0;
+  right: 0;
   height: 70px;
-  background-color: green;
+  background-color: transparent;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.banner {
+  position: relative;
+}
+
+.banner__img {
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.banner__data {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  margin: auto;
+  color: #fff;
+  width: 90%;
+  text-align: center;
+}
+
+@media screen and (min-width: 640px) {
+  .banner__data {
+    width: 50%;
+  }
+}
+
+.banner__title {
+  text-transform: uppercase;
 }
