--- a/niktravel/templates/home/index.html
+++ b/niktravel/templates/home/index.html
@@ -35,95 +35,106 @@
         <div class="tours">
           
           <div class="tour">
-            <img src="" alt="" class="tour__img">
-            <div class="tour__data">
-              <span class="tour__city">cusco</span>
-              <span class="tour__day">8 dias</span>
-              <h3 class="tour__title">valle sagrado</h3>
-              <span class="tour__cost">$ 800</span>
-              <ul class="tour-detail">
-                <li class="tour-detail__item">4-5 dias</li>
-                <li class="tour-detail__item">Visistar centro arqueoligicos</li>
-                <li class="tour-detail__item">vsitar muchupicchu</li>
-                <li class="tour-detail__item">100% satisfacion Garantisada.</li>
-              </ul>
-            </div>
+            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+            
+            <span class="tour__city">CUSCO</span>
+            <span class="tour__day">8 dias</span>
+            <h3 class="tour__title">valle sagrado de los incas</h3>
+            <span class="tour__cost">$ 800</span>
+            <ul class="tour-detail">
+              <li class="tour-detail__item">4-5 dias</li>
+              <li class="tour-detail__item">Visistar centro arqueoligicos</li>
+              <li class="tour-detail__item">vsitar muchupicchu</li>
+              <li class="tour-detail__item">100% satisfacion Garantisada.</li>
+            </ul>
           </div>
 
           <div class="tour">
-            <img src="" alt="" class="tour__img">
-            <div class="tour__data">
-              <span class="tour__city">cusco</span>
-              <span class="tour__day">8 dias</span>
-              <h3 class="tour__title">valle sagrado</h3>
-              <span class="tour__cost">$ 800</span>
-              <ul class="tour-detail">
-                <li class="tour-detail__item">4-5 dias</li>
-                <li class="tour-detail__item">Visistar centro arqueoligicos</li>
-                <li class="tour-detail__item">vsitar muchupicchu</li>
-                <li class="tour-detail__item">100% satisfacion Garantisada.</li>
-              </ul>
-            </div>
-          </div>
-        
-          <div class="tour">
-              <img src="" alt="" class="tour__img">
-              <div class="tour__data">
-                <span class="tour__city">cusco</span>
-                <span class="tour__day">8 dias</span>
-                <h3 class="tour__title">valle sagrado</h3>
-                <span class="tour__cost">$ 800</span>
-                <ul class="tour-detail">
-                  <li class="tour-detail__item">4-5 dias</li>
-                  <li class="tour-detail__item">Visistar centro arqueoligicos</li>
-                  <li class="tour-detail__item">vsitar muchupicchu</li>
-                  <li class="tour-detail__item">100% satisfacion Garantisada.</li>
-                </ul>
-              </div>
+            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+            
+            <span class="tour__city">CUSCO</span>
+            <span class="tour__day">8 dias</span>
+            <h3 class="tour__title">valle sagrado</h3>
+            <span class="tour__cost">$ 800</span>
+            <ul class="tour-detail">
+              <li class="tour-detail__item">4-5 dias</li>
+              <li class="tour-detail__item">Visistar centro arqueoligicos</li>
+              <li class="tour-detail__item">vsitar muchupicchu</li>
+              <li class="tour-detail__item">100% satisfacion Garantisada.</li>
+            </ul>
           </div>
 
           <div class="tour">
-              <img src="" alt="" class="tour__img">
-              <div class="tour__data">
-                <span class="tour__city">cusco</span>
-                <span class="tour__day">8 dias</span>
-                <h3 class="tour__title">valle sagrado</h3>
-                <span class="tour__cost">$ 800</span>
-                <ul class="tour-detail">
-                  <li class="tour-detail__item">4-5 dias</li>
-                  <li class="tour-detail__item">Visistar centro arqueoligicos</li>
-                  <li class="tour-detail__item">vsitar muchupicchu</li>
-                  <li class="tour-detail__item">100% satisfacion Garantisada.</li>
-                </ul>
-              </div>
+            <img src="{% static 'img/nazca.jpg' %}" alt="" class="tour__img">
+            
+            <span class="tour__city">ICA</span>
+            <span class="tour__day">5 dias</span>
+            <h3 class="tour__title">lineas de nazca</h3>
+            <span class="tour__cost">$ 300</span>
+            <ul class="tour-detail">
+              <li class="tour-detail__item">4-5 dias</li>
+              <li class="tour-detail__item">Visistar centro arqueoligicos</li>
+              <li class="tour-detail__item">vsitar muchupicchu</li>
+              <li class="tour-detail__item">100% satisfacion Garantisada.</li>
+            </ul>
+          </div>
+
+          <div class="tour">
+            <img src="{% static 'img/huacachina.jpg' %}" alt="" class="tour__img">
+            
+            <span class="tour__city">ICA</span>
+            <span class="tour__day">8 dias</span>
+            <h3 class="tour__title">Huacachina</h3>
+            <span class="tour__cost">$ 400</span>
+            <ul class="tour-detail">
+              <li class="tour-detail__item">4-5 dias</li>
+              <li class="tour-detail__item">Visistar centro arqueoligicos</li>
+              <li class="tour-detail__item">vsitar muchupicchu</li>
+              <li class="tour-detail__item">100% satisfacion Garantisada.</li>
+            </ul>
+          </div>
+
+          <div class="tour">
+            <img src="{% static 'img/peru-cusco.jpg' %}" alt="" class="tour__img">
+            
+            <span class="tour__city">CUSCO</span>
+            <span class="tour__day">8 dias</span>
+            <h3 class="tour__title">Plaza de armas</h3>
+            <span class="tour__cost">$ 800</span>
+            <ul class="tour-detail">
+              <li class="tour-detail__item">4-5 dias</li>
+              <li class="tour-detail__item">Visistar centro arqueoligicos</li>
+              <li class="tour-detail__item">vsitar muchupicchu</li>
+              <li class="tour-detail__item">100% satisfacion Garantisada.</li>
+            </ul>
           </div>
 
         </div>
       </section>
 
-      <section class="section">
-        <h2 class="section__title">PORQUE ELEGIRNOS</h2>
+      <section class="section--paralax">
+        <h2 class="section--paralax__title">PORQUE ELEGIRNOS</h2>
 
         <div class="cards">
 
           <div class="card">
-            <i>imagen</i>
+            <span class="card__icon icon-star"></span>
             <h3 class="card__title">World Class Service</h3>  
-            <p class="card__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia praesentium laborum omnis laudantium voluptatem inventore rerum aperiam saepe ipsum.</p>
+            <p class="card__description">Lorem ipsum dolor. Mollitia praesentium laborum omnis laudantium voluptatem inventore rerum aperiam saepe ipsum.</p>
             <a href="" class="card__link">mas información.</a>
           </div>
 
           <div class="card">
-              <i>imagen</i>
+            <span class="card__icon icon-globe"></span>
               <h3 class="card__title">World Class Service</h3>  
-              <p class="card__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia praesentium laborum omnis laudantium voluptatem inventore rerum aperiam saepe ipsum.</p>
+              <p class="card__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia praesentium laborum omnis aperiam saepe ipsum.</p>
               <a href="" class="card__link">mas información.</a>
           </div>
 
           <div class="card">
-              <i>imagen</i>
+            <span class="card__icon icon-price-tag"></span>
               <h3 class="card__title">World Class Service</h3>  
-              <p class="card__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia praesentium laborum omnis laudantium voluptatem inventore rerum aperiam saepe ipsum.</p>
+              <p class="card__description">Lorem ipsum dolor sit amet, consect adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa </p>
               <a href="" class="card__link">mas información.</a>
           </div>
 
@@ -131,8 +142,8 @@
       </section>
 
       <section class="section">
-        <h2 class="secction__title">mejores ofertas</h2>
-        <span class="secctions__subtitle">mira nuestras tours mas recientes</span>
+        <h2 class="section__title">MEJORES OFERTAS</h2>
+        <span class="section__subtitle">mira nuestras tours mas recientes</span>
         
         <div class="tours">
           
