--- a/niktravel/static/scss/layaut/_section.scss
+++ b/niktravel/static/scss/layaut/_section.scss
@@ -13,6 +13,35 @@
         @extend %title3;
         text-align: center;
         color: $primary;
-        padding-bottom: $line-height;
+        padding-bottom: $line-height*2;
+    }
+}
+
+.section--paralax {
+    @include edContainer;
+    @include full;
+    flex-direction: column;
+    margin-top: $line-height*2;
+    padding-bottom: $line-height*5;
+    background-image: url("../img/machu-picchu-2.jpg");
+    
+    height: 100%;
+
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @include from(m) {
+        height: 400px;        
+    }
+
+    &__title {
+        @include edItem;
+        text-align: center;
+        padding: $line-height*2 0;
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: 800;
     }
 }
