cracion del footer

--- a/niktravel/static/scss/_ed-grid.scss
+++ b/niktravel/static/scss/_ed-grid.scss
@@ -69,5 +69,6 @@
 @import "layaut/app.scss";
 @import "layaut/section.scss";
 @import "layaut/header.scss";
+@import "layaut/footer.scss";
 @import "layaut/banner.scss";
 
