--- a/niktravel/templates/home/index.html
+++ b/niktravel/templates/home/index.html
@@ -146,8 +146,72 @@
         <span class="section__subtitle">mira nuestras tours mas recientes</span>
         
         <div class="tours">
+
+          <div class="tour">
+            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+            
+            <div class="tour__info">
+              <span class="tour__city">CUSCO</span>
+              <span class="tour__day">8 dias</span>
+              <h3 class="tour__title">valle sagrado de los incas</h3>
+              <span class="tour__cost">$ 800</span>
+            </div>  
+          </div>
+
+          <div class="tour">
+            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+            
+            <div class="tour__info">
+              <span class="tour__city">CUSCO</span>
+              <span class="tour__day">8 dias</span>
+              <h3 class="tour__title">valle sagrado de los incas</h3>
+              <span class="tour__cost">$ 800</span>
+            </div>  
+          </div>
+
+          <div class="tour">
+            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+            
+            <div class="tour__info">
+              <span class="tour__city">CUSCO</span>
+              <span class="tour__day">8 dias</span>
+              <h3 class="tour__title">valle sagrado de los incas</h3>
+              <span class="tour__cost">$ 800</span>
+            </div>  
+          </div>
           
-        
+          <div class="tour">
+            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+            
+            <div class="tour__info">
+              <span class="tour__city">CUSCO</span>
+              <span class="tour__day">8 dias</span>
+              <h3 class="tour__title">valle sagrado de los incas</h3>
+              <span class="tour__cost">$ 800</span>
+            </div>  
+          </div>
+
+          <div class="tour">
+            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+            
+            <div class="tour__info">
+              <span class="tour__city">CUSCO</span>
+              <span class="tour__day">8 dias</span>
+              <h3 class="tour__title">valle sagrado de los incas</h3>
+              <span class="tour__cost">$ 800</span>
+            </div>  
+          </div>
+
+          <div class="tour">
+            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+            
+            <div class="tour__info">
+              <span class="tour__city">CUSCO</span>
+              <span class="tour__day">8 dias</span>
+              <h3 class="tour__title">valle sagrado de los incas</h3>
+              <span class="tour__cost">$ 800</span>
+            </div>  
+          </div>
         </div>
       </section>
     </main>
