--- a/niktravel/static/css/styles.css
+++ b/niktravel/static/css/styles.css
@@ -34,7 +34,7 @@ a:hover {
   text-decoration: underline;
 }
 
-.ed-container, .section, .section--paralax, .header {
+.ed-container, .section, .section--paralax, .header, .footer-container, .footer__end-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -46,7 +46,7 @@ a:hover {
   width: 100%;
 }
 
-.ed-item, .toggle-menu, .logo-header, .main-nav, .tours, .section__title, .section__subtitle, .section--paralax__title {
+.ed-item, .toggle-menu, .logo-header, .main-nav, .tours, .section__title, .section__subtitle, .section--paralax__title, .footer__data, .footer__referencs, .copy, .social {
   margin: 0;
   padding-left: 0.9375em;
   padding-right: 0.9375em;
@@ -954,55 +954,55 @@ body.sticky-footer > footer {
 }
 
 .banner__title {
-  font-size: 1.999em;
+  font-size: 1.999rem;
   line-height: 30px;
 }
 
 @media screen and (min-width: 640px) {
   .banner__title {
-    font-size: 2.827em;
+    font-size: 2.827rem;
     line-height: 37.5px;
   }
 }
 
 .tour__title, .tour__cost {
-  font-size: 1.414em;
+  font-size: 1.414rem;
   line-height: 22.5px;
 }
 
 @media screen and (min-width: 640px) {
   .tour__title, .tour__cost {
-    font-size: 1.999em;
+    font-size: 1.999rem;
     line-height: 30px;
   }
 }
 
 .tour__city, .tour-detail, .section__subtitle {
-  font-size: 1em;
+  font-size: 1rem;
   line-height: 15px;
 }
 
 @media screen and (min-width: 640px) {
   .tour__city, .tour-detail, .section__subtitle {
-    font-size: 1.414em;
+    font-size: 1.414rem;
     line-height: 15px;
   }
 }
 
 .tour__day, .banner__description {
-  font-size: 0.707em;
+  font-size: 0.817rem;
   line-height: 15px;
 }
 
 @media screen and (min-width: 640px) {
   .tour__day, .banner__description {
-    font-size: 1em;
+    font-size: 1rem;
     line-height: 15px;
   }
 }
 
 small, .small {
-  font-size: 0.707em;
+  font-size: 0.817rem;
   line-height: 9px;
 }
 
@@ -1192,7 +1192,7 @@ h1, h2, h3, h4 {
 
 @media screen and (min-width: 640px) {
   .tour__city {
-    font-size: 1em;
+    font-size: 1rem;
   }
 }
 
@@ -1207,7 +1207,7 @@ h1, h2, h3, h4 {
 
 @media screen and (min-width: 640px) {
   .tour__day {
-    font-size: 1em;
+    font-size: 1rem;
   }
 }
 
@@ -1220,7 +1220,7 @@ h1, h2, h3, h4 {
 
 @media screen and (min-width: 640px) {
   .tour__title {
-    font-size: 1em;
+    font-size: 1rem;
   }
 }
 
@@ -1235,7 +1235,7 @@ h1, h2, h3, h4 {
 
 @media screen and (min-width: 640px) {
   .tour__cost {
-    font-size: 1em;
+    font-size: 1rem;
   }
 }
 
@@ -1249,7 +1249,7 @@ h1, h2, h3, h4 {
 
 @media screen and (min-width: 640px) {
   .tour-detail {
-    font-size: 0.707em;
+    font-size: 0.817rem;
   }
 }
 
@@ -1293,7 +1293,7 @@ h1, h2, h3, h4 {
   height: 70px;
   width: 70px;
   top: -35px;
-  font-size: 1.999em;
+  font-size: 1.999rem;
   right: 0;
   left: 0;
   margin-left: auto;
@@ -1317,18 +1317,18 @@ h1, h2, h3, h4 {
     height: 60px;
     width: 60px;
     top: -30px;
-    font-size: 1.414em;
+    font-size: 1.414rem;
   }
 }
 
 .card__title {
-  font-size: 1.414em;
+  font-size: 1.414rem;
   font-weight: 800;
 }
 
 @media screen and (min-width: 640px) {
   .card__title {
-    font-size: 1em;
+    font-size: 1rem;
   }
 }
 
@@ -1421,6 +1421,243 @@ h1, h2, h3, h4 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  z-index: 100;
+}
+
+.footer-container {
+  padding-top: 2.34375em;
+  padding-bottom: 2.34375em;
+}
+
+.footer {
+  margin-top: 0.9375em;
+  background-color: #000;
+  color: #fff;
+}
+
+.footer__data {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (min-width: 640px) {
+  .footer__data {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-bottom: 2.34375em;
+  }
+}
+
+.footer__about, .footer__info, .footer__tripavisor {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.footer__logo {
+  font-size: 1.999rem;
+  font-weight: 800;
+}
+
+.footer__description, .footer__info__item {
+  color: #ccc;
+  font-size: 0.817rem;
+}
+
+.footer__info__item {
+  padding: 3px 0;
+}
+
+.footer__referencs {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (min-width: 640px) {
+  .footer__referencs {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.footer__desc, .footer__pay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.footer__desc span, .footer__pay span {
+  width: 100%;
+  margin-bottom: 0.9375em;
+  margin-top: 0.9375em;
+}
+
+@media screen and (min-width: 640px) {
+  .footer__desc span, .footer__pay span {
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  .footer__desc, .footer__pay {
+    width: 50%;
+  }
+}
+
+.footer__desc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+@media screen and (min-width: 640px) {
+  .footer__desc img {
+    width: 40%;
+    height: auto;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+}
+
+.footer__pay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+@media screen and (min-width: 640px) {
+  .footer__pay img {
+    width: 20%;
+    height: auto;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+}
+
+.footer__end {
+  background-color: #fff;
+  color: #636e72;
+  padding-top: 0.9375em;
+  padding-bottom: 0.9375em;
+}
+
+.footer__end-container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (min-width: 640px) {
+  .footer__end-container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.footer__title {
+  text-transform: uppercase;
+  margin-bottom: 7.5px;
+}
+
+.copy {
+  width: 100%;
+  font-size: 0.817rem;
+  text-align: center;
+}
+
+@media screen and (min-width: 640px) {
+  .copy {
+    width: 60%;
+  }
+}
+
+.copy a {
+  color: #b63327;
+  font-weight: 800;
+}
+
+@media screen and (min-width: 640px) {
+  .copy {
+    text-align: end;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+}
+
+.social {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (min-width: 640px) {
+  .social {
+    width: 40%;
+  }
+}
+
+.social span {
+  margin: 0 0.46875em;
+  font-size: 1.414rem;
+}
+
+.social span:hover {
+  color: #b63327;
+}
+
+@media screen and (min-width: 640px) {
+  .social {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .social span {
+    font-size: 1rem;
+    margin: 0 0.9375em 0 0;
+  }
 }
 
 .banner {
